# openweathercli-old

./: .gitignore  Cargo.toml  README.md  debug.json  response_example.txt  run.sh  setup.sh
scripts/: get_icon.sh  install_icons.sh
src/: main.rs  main.rs.bk
src/api/: data.rs  request.rs  uri.rs
src/config/: args.rs  config.rs  mod.rs  yaml.rs
src/util/: data.rs  handle.rs  mod.rs
src/utils/: data.rs  mod.rs  request.rs  uri.rs
target.bk/: .rustc_info.json
target.bk/debug/: libopenweathercli.d  libopenweathercli.rlib  openweathercli.d
target.bk/debug/.fingerprint/anstream-23f48fce91d0211e/: lib-anstream  lib-anstream.json
target.bk/debug/.fingerprint/anstream-4ff96bb674e82356/: lib-anstream  lib-anstream.json
target.bk/debug/.fingerprint/anstream-a9a1a13b7732f257/: lib-anstream  lib-anstream.json
target.bk/debug/.fingerprint/anstream-c16dbd019113932b/: lib-anstream  lib-anstream.json
target.bk/debug/.fingerprint/anstyle-19b13973a36fa03f/: lib-anstyle  lib-anstyle.json
target.bk/debug/.fingerprint/anstyle-94970941defa9d1c/: lib-anstyle  lib-anstyle.json
target.bk/debug/.fingerprint/anstyle-9f26c7065f018d19/: lib-anstyle  lib-anstyle.json
target.bk/debug/.fingerprint/anstyle-b5441e274f878947/: lib-anstyle  lib-anstyle.json
target.bk/debug/.fingerprint/anstyle-parse-323abffd3a82ae3c/: lib-anstyle-parse  lib-anstyle-parse.json
target.bk/debug/.fingerprint/anstyle-parse-431b4204c1d8122d/: lib-anstyle-parse  lib-anstyle-parse.json
target.bk/release/: libopenweathercli.d  libopenweathercli.rlib  openweathercli.d
(+1157 files in other folders)
