[package]
name = "openweathercli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.10", features = ["derive"]}
reqwest = {versin = "0.11.18", features = ["json"]}
tokio = { version = "1.29.1", features = ["full"]}
serde = { version = "1.0.164", features = ["derive"]}
# serde_json = "1.0.99"
serde_yaml = "0.9.22"
